--- a/pages/me/me.wxml
+++ b/pages/me/me.wxml
@@ -1,1 +1,9 @@
-<view>me</view>
+<view class="body">
+  <i-card title="孙大诚" extra="" thumb="http://118.24.27.231:81/static/5b96461e43929100012a7ccb/head-image-801.jpg">
+    <view slot="footer">这家伙很懒啥都没说</view>
+  </i-card>
+  <i-panel title="输入框">
+    <i-input value="{{ value2 }}" type="number" title="联系电话" placeholder="请输入手机号" />
+    <i-input value="{{ value3 }}" type="textarea" title="详细地址" placeholder="请输入详细地址(最多50字)" maxlength="50" />
+  </i-panel>
+</view>
