--- a/pages/me/me.wxml
+++ b/pages/me/me.wxml
@@ -1,7 +1,37 @@
 <view class="body">
-  <i-card title="孙大诚" extra="" thumb="http://118.24.27.231:81/static/5b96461e43929100012a7ccb/head-image-801.jpg">
-    <view slot="footer">这家伙很懒啥都没说</view>
-  </i-card>
+  <view style="height:10px;"></view>
+  <view class="view-me">
+    <van-row>
+      <van-col span="6">
+        <image class="view-avatar" src="http://118.24.27.231:81/static/5b96461e43929100012a7ccb/head-image-801.jpg" mode="scaleToFill" lazy-load="true"></image>
+      </van-col>
+      <van-col span="8">
+        <view style="margin-top:13%;">
+          <view class="view-nick">内容不错</view>
+          <view class="view-id">内容不错</view>
+        </view>
+      </van-col>
+      <van-col span="10">
+        <view class="view-set">
+          <van-icon name="more-o" bind:click="onClickMore" />
+        </view>
+      </van-col>
+    </van-row>
+  </view>
+  <i-panel title="group">
+    <van-cell-group>
+      <van-cell value="内容" icon="shop" is-link>
+        <view slot="title">
+          <span class="van-cell-text">单元格</span>
+          <van-tag type="danger">标签</van-tag>
+        </view>
+      </van-cell>
+      <van-cell title="单元格" icon="http://118.24.27.231:81/static/5b96461e43929100012a7ccb/head-image-801.jpg" is-link />
+      <van-cell title="单元格" border="{{ false }}">
+        <van-icon slot="right-icon" name="search" class="van-cell__right-icon" />
+      </van-cell>
+    </van-cell-group>
+  </i-panel>
   <i-panel title="输入框">
     <i-input value="{{ value2 }}" type="number" title="联系电话" placeholder="请输入手机号" />
     <i-input value="{{ value3 }}" type="textarea" title="详细地址" placeholder="请输入详细地址(最多50字)" maxlength="50" />
