--- a/pages/me/me.wxss
+++ b/pages/me/me.wxss
@@ -3,15 +3,15 @@
   overflow: hidden;
   position: relative;
   background: #fff;
+  /* padding-top: 16px; */
+  padding-top: 4px;
+  padding-left: 4px;
 }
 
 .view-avatar {
-  width: 66px;
-  height: 66px;
-  line-height: 40px;
-  border-radius: 33px;
-  margin: 15px;
-  margin-bottom: 10px;
+  width: 30px;
+  height: 30px;
+  /* border-radius: 18px; */
 }
 
 .view-nick {
